Fixing bio alignment
darcs-hash:20081121161645-eefa4-6e4af82adb69e89ada3fdd5eee8f02bc3aefeed1.gz

--- a/theme/default/display.css
+++ b/theme/default/display.css
@@ -923,6 +923,13 @@ form#tag_user .input_instructions {
 margin-left:4.5em;
 }
 
+.profile_list p {
+margin:0 0 0.5em 0;
+}
+
+.profile_list .bio {
+margin-left:4.5em;
+}
 
 
 /* ----- Mailbox ----- */
